--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation 'com.google.maps:google-maps-services:1.0.1'
     implementation 'org.slf4j:slf4j-simple:1.7.25'
     implementation 'com.google.code.gson:gson:2.8.9'
+    implementation "io.reactivex.rxjava3:rxjava:3.1.2"
 }
